...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurredstreet"
    tools:context=".controllers.LoginActivity">

    <EditText
        android:id="@+id/loginEmailTextField"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="310dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
