...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/registerPasswordInputText"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
